# Render3D

./: README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/yoki/render/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/include/: gl.h  glsl.h
android/app/src/main/java/com/yoki/render/: MainActivity.java  RenderGLView.java  RenderNativeBridge.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/yoki/render/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
src/core/: App.cpp  Camera.cpp  Shader.cpp  Shape.cpp  SkyBox.cpp
src/example/: CubeApp.cpp  TriangleApp.cpp
src/include/: App.h  Camera.h  CubeApp.h  IInput.h  IResLoader.h  PlatformAndroid.h  PlatformWindows.h  Shader.h  Shape.h  Skybox.h  TriangleApp.h  gl.h
src/platform/: AndroidApp.cpp  PlatformAndroid.cpp  PlatformWindows.cpp  WinApp.cpp
src/shader/: triangle_shader.glsl
windows/: makefile
windows/assets/: hello.txt
windows/include/: gl.h  glsl.h
